force-app/main/default/objects/OpportunityLineItem/fields/Aberta__c.field-meta.xml
<CustomField>
    <fullName>Aberta__c</fullName>
    <formula>IF(
TEXT(Opportunity.StageName) != &apos;LOSS&apos;,  (1/Quantity), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aberta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>