force-app/main/default/objects/OpportunityLineItem/fields/Abreviacoes__c.field-meta.xml
<CustomField>
    <fullName>Abreviacoes__c</fullName>
    <label>Abreviações</label>
    <length>255</length>
    <type>Text</type>
</CustomField>