force-app/main/default/objects/OpportunityLineItem/fields/Analisado__c.field-meta.xml
<CustomField>
    <fullName>Analisado__c</fullName>
    <formula>TEXT(Cumprimento_com_o_edital__c) != &apos;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Analisado</label>
    <type>Checkbox</type>
</CustomField>