force-app/main/default/objects/OpportunityLineItem/fields/Analise_Tecnica__c.field-meta.xml
<CustomField>
    <fullName>Analise_Tecnica__c</fullName>
    <label>Análise Técnica</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>