force-app/main/default/objects/OpportunityLineItem/fields/Cumprimento_com_o_edital__c.field-meta.xml
<CustomField>
    <fullName>Cumprimento_com_o_edital__c</fullName>
    <label>Cumprimento com o edital</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Total</fullName>
            </value>
            <value>
                <fullName>Parcial</fullName>
            </value>
            <value>
                <fullName>Não cumpre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>