force-app/main/default/objects/OpportunityLineItem/fields/Descri_o_Fonte__c.field-meta.xml
<CustomField>
    <fullName>Descri_o_Fonte__c</fullName>
    <formula>PricebookEntry.Product2.Description</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descrição fonte</label>
    <type>Text</type>
</CustomField>