force-app/main/default/objects/OpportunityLineItem/fields/Descricao_do_Especialista__c.field-meta.xml
<CustomField>
    <fullName>Descricao_do_Especialista__c</fullName>
    <label>Descritivo para proposta</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>