force-app/main/default/objects/OpportunityLineItem/fields/Enviado_questionameto_ou_impugna_o__c.field-meta.xml
<CustomField>
    <fullName>Enviado_questionameto_ou_impugna_o__c</fullName>
    <inlineHelpText>Enviado questionamento ou impugnação para melhoria dos filtros?</inlineHelpText>
    <label>Enviado questionamento ou impugnação?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>