force-app/main/default/objects/OpportunityLineItem/fields/Fam_lia__c.field-meta.xml
<CustomField>
    <fullName>Fam_lia__c</fullName>
    <formula>TEXT( PricebookEntry.Product2.Family )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Família</label>
    <type>Text</type>
</CustomField>