force-app/main/default/objects/OpportunityLineItem/fields/Funil_publico__c.field-meta.xml
<CustomField>
    <fullName>Funil_publico__c</fullName>
    <formula>IF(
AND(
TEXT(Opportunity.StageName) != &apos;LOSS&apos;,
OR(
Opportunity.Propriedade_da_conta__c == &apos;FILANTROPIA&apos;,
Opportunity.Propriedade_da_conta__c == &apos;PUBLICO&apos;
)
),  TotalPrice, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funil público</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>