force-app/main/default/objects/OpportunityLineItem/fields/Interposicoes__c.field-meta.xml
<CustomField>
    <fullName>Interposicoes__c</fullName>
    <label>Interposições</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>