force-app/main/default/objects/OpportunityLineItem/fields/Item_do_edital__c.field-meta.xml
<CustomField>
    <fullName>Item_do_edital__c</fullName>
    <label>Item do edital</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>