force-app/main/default/objects/OpportunityLineItem/fields/Item_Pai__c.field-meta.xml
<CustomField>
    <fullName>Item_Pai__c</fullName>
    <label>Item pai</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>