force-app/main/default/objects/OpportunityLineItem/fields/Itens_que_justificam__c.field-meta.xml
<CustomField>
    <fullName>Itens_que_justificam__c</fullName>
    <inlineHelpText>Itens que justifiquem a escolha de marca e modelo.</inlineHelpText>
    <label>Itens que justifiquem</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>