force-app/main/default/objects/OpportunityLineItem/fields/Linha_Relatorio__c.field-meta.xml
<CustomField>
    <fullName>Linha_Relatorio__c</fullName>
    <label>Linha Relatorio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>