force-app/main/default/objects/OpportunityLineItem/fields/Marcas_que_nao_atendem__c.field-meta.xml
<CustomField>
    <fullName>Marcas_que_nao_atendem__c</fullName>
    <label>Marcas que não atendem</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>