force-app/main/default/objects/OpportunityLineItem/fields/Modelo_do_Produto__c.field-meta.xml
<CustomField>
    <fullName>Modelo_do_Produto__c</fullName>
    <formula>PricebookEntry.Product2.Modelo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modelo</label>
    <type>Text</type>
</CustomField>