force-app/main/default/objects/OpportunityLineItem/fields/Nome_do_Fabricante__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_Fabricante__c</fullName>
    <formula>Text( PricebookEntry.Product2.Marca__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marca</label>
    <type>Text</type>
</CustomField>