force-app/main/default/objects/OpportunityLineItem/fields/ordem__c.field-meta.xml
<CustomField>
    <fullName>ordem__c</fullName>
    <label>ordem</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>