force-app/main/default/objects/OpportunityLineItem/fields/Perdido__c.field-meta.xml
<CustomField>
    <fullName>Perdido__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Perdido</label>
    <type>Checkbox</type>
</CustomField>