force-app/main/default/objects/OpportunityLineItem/fields/Produto_Vet__c.field-meta.xml
<CustomField>
    <fullName>Produto_Vet__c</fullName>
    <formula>IF(CONTAINS(TEXT(PricebookEntry.Product2.Linha__c), &apos;VETERINÁRIA&apos;),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Produto Vet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>