force-app/main/default/objects/OpportunityLineItem/fields/Resposta_doorgao_e_novos_filtros__c.field-meta.xml
<CustomField>
    <fullName>Resposta_doorgao_e_novos_filtros__c</fullName>
    <inlineHelpText>RESPOSTA DO ÓRGÃO E NOVOS FILTROS SE APLICÁVEL</inlineHelpText>
    <label>Resposta do órgão e novos filtros</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>