force-app/main/default/objects/OpportunityLineItem/fields/Subtotal_Unit__c.field-meta.xml
<CustomField>
    <fullName>Subtotal_Unit__c</fullName>
    <label>Subtotal Unit</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>