force-app/main/default/objects/OpportunityLineItem/fields/Tipo_do_produto__c.field-meta.xml
<CustomField>
    <fullName>Tipo_do_produto__c</fullName>
    <formula>TEXT(PricebookEntry.Product2.Tipo_do_Produto__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo do produto</label>
    <type>Text</type>
</CustomField>