force-app/main/default/objects/OpportunityLineItem/fields/Upside_Item__c.field-meta.xml
<CustomField>
    <fullName>Upside_Item__c</fullName>
    <formula>IF(
OR(
TEXT(Opportunity.StageName) == &apos;UPSIDE&apos;,
TEXT(Opportunity.StageName) == &apos;UPSIDE HIGH&apos;)
, TotalPrice , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Upside Item</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>