force-app/main/default/objects/OpportunityLineItem/fields/Valor_Minimo__c.field-meta.xml
<CustomField>
    <fullName>Valor_Minimo__c</fullName>
    <label>Valor mínimo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>