force-app/main/default/objects/OpportunityLineItem/fields/Valor_original_perdido__c.field-meta.xml
<CustomField>
    <fullName>Valor_original_perdido__c</fullName>
    <label>Valor original (perdido)</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>