force-app/main/default/objects/OpportunityLineItem/fields/Valor_Unit_C_Desconto__c.field-meta.xml
<CustomField>
    <fullName>Valor_Unit_C_Desconto__c</fullName>
    <formula>UnitPrice - (UnitPrice * Discount)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Unit C/ Desconto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>